--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
    <li>ほげほげ</li>
    <li>ほにゃらら</li>
   </ol>
- </body>
- </html>
     
 <h2>練習問題2.3</h2>
     
@@ -38,8 +36,7 @@
  <dd>可視光線の波長の長短によって人が視覚で感じ分けられる色覚・色刺激のこと。</dd>
 </dl> 
 
-<p>ゲームの得点は以下の順序で計算されます。
-  </p>
+<p>ゲームの得点は以下の順序で計算されます。</p>
  <dl>
   <dt>金貨を獲得している場合</dt>
   <dd>金貨一枚につき１０ポイント加算されます。
@@ -51,3 +48,6 @@
   <dt>それ以外の場合</dt>
   <dd>ポイントは加算されません。</dd>
  </dl> 
+   
+  </body>
+ </html>
