--- a/index.html
+++ b/index.html
@@ -48,37 +48,31 @@
   <dt>それ以外の場合</dt>
   <dd>ポイントは加算されません。</dd>
  </dl> 
-   
- </body>
-</html>
 
 <h3>練習問題2.4</h3>
 
 <table>
-  <caption>
-  <strong>お寿司をどこで食べるか？その長所と短所</strong>
-  <details>
-  <summary>このテーブルの説明</summary>
-  <p>以下のテーブルでは、２番目のカラムに寿司店のタイプが入れられています。その左側にそのようなタイプのお店でお寿司を食べる場合の長所が、右側に短所が入れられています。</p>
-  </details>
+  <caption><strong>お寿司をどこで食べるか？その長所と短所</strong>
+  <details><summary>このテーブルの説明</summary>
+   <p>以下のテーブルでは、２番目のカラムに寿司店のタイプが入れられています。その左側にそのようなタイプのお店でお寿司を食べる場合の長所が、右側に短所が入れられています。</p>
+   </details>
   </caption>
   <thead>
-  <tr><th>長所</th><th>どこで食べるか</th><th>短所</th></tr>
+   <tr><th>長所</th><th>どこで食べるか</th><th>短所</th></tr>
   </thead>
   <tbody>
-  <tr><td>ネタにこだわり、技術が素晴らしい</td><th>銀座の高級店
-  </th><td>値段が時価で不安、予約が必要</td></tr>
-  <tr><td>値段が良心的、気軽に手に取れる</td><th>回転寿司
-  </th><td>ネタが解凍もの、休みの日は混む</td></tr>
+   <tr><td>ネタにこだわり、技術が素晴らしい</td><th>銀座の高級店
+   </th><td>値段が時価で不安、予約が必要</td></tr>
+   <tr><td>値段が良心的、気軽に手に取れる</td><th>回転寿司
+   </th><td>ネタが解凍もの、休みの日は混む</td></tr>
   </tbody>
-</table> 
-
-<table>
-  <caption>
-  <strong>お寿司をどこで食べるか？その長所と短所</strong>
-  </caption>
+ </table> 
+<p>
+<p>
+ <table>
+  <caption><strong>お寿司をどこで食べるか？その長所と短所</strong></caption>
   <thead>
-  <tr><th>どこで食べるか</th><th>長所</th><th>短所
+   <tr><th>どこで食べるか</th><th>長所</th><th>短所
   </th></tr>
   </thead>
   <tbody>
@@ -87,3 +81,6 @@
   </td><td>ネタが解凍もの、休みの日は混む</td></tr>
   </tbody>
 </table>
+
+    </body>
+</html>
