--- a/index.html
+++ b/index.html
@@ -174,6 +174,11 @@ maxlength="4"></label></p>
 <a href=“mailto:zm19205@josai.ac.jp”>自分宛メール（自分のメールアドレスを入力）</a>
 <br>
 <a href=“https://www.josai.ac.jp/education/management/index.html /”><imgsrc=“./image/keiei_small.jpg” alt=“城西大学ホームページ"></a>
+<a href ="a.html" target="_ 別画面を開いてリンクします </ br
+<a href ="a.html" target="_ リンク元と同じフレームにリンクします </ br
+<a href ="a.html" target="_ ひとつ上の親フレームにリンクします </ br
+<a href ="a.html" target="_ フレームをすべて解除してリンクします </ br
+<a href ="a.html" abc abc という名前のフレームにリンクします </ br
    
   </body>
 </html>
