--- a/index.html
+++ b/index.html
@@ -165,23 +165,30 @@ maxlength="4"></label></p>
   <input type="reset" value="リセット">
   </p>
    
-<h1>練習問題3.1</h1> 
-   
-<a href=“a.html”>相対パスでリンクします</a>
-<br>
-<a href=“https://www.josai.ac.jp/education/management/index.html”>絶対パスで城西大学経営学部へリンクします。</a>
-<br>
-<a href=“mailto:zm19205@josai.ac.jp”>自分宛メール（自分のメールアドレスを入力）</a>
-<br>
-<a href=“https://www.josai.ac.jp/education/management/index.html /”><imgsrc=“./image/keiei_small.jpg” alt=“城西大学ホームページ"></a>
-
-<h1>練習問題3.2</h1> 
+<h1>練習問題3.1</h1>
+  <a href="a.html">相対パスでリンクします</a><br>
+  <a href="https://www.josai.ac.jp/education/management/index.html">絶対パスで城西大学経営学部へリンクします。</a><br>
+  <a href="mailto:zm20121@josai.ac.jp">自分宛メール（zm20121@josai.ac.jp）</a><br>
+  <a href="https://www.josai.ac.jp/education/management/index.html/"><img src="./image/keiei_small.jpg" alt="城西大学ホームページ"></a>
   
-<a href ="a.html" target="_ 別画面を開いてリンクします </ br
-<a href ="a.html" target="_ リンク元と同じフレームにリンクします </ br
-<a href ="a.html" target="_ ひとつ上の親フレームにリンクします </ br
-<a href ="a.html" target="_ フレームをすべて解除してリンクします </ br
-<a href ="a.html" abc abc という名前のフレームにリンクします </ br
+<h1>練習問題3.2</h1>
+  <a href="a.html" target"_blank">別画面を開いてリンクします</a><br>
+  <a href="a.html" target"_self">リンク元と同じフレームにリンクします</a><br>
+  <a href="a.html" target"_parent">ひとつ上の親フレームにリンクします</a><br>
+  <a href="a.html" target"_top">フレームをすべて解除してリンクします</a><br>
+  <a href="a.html" target="abc">abcという名前のフレームにリンクします</a><br>
+  ファイルの途中にidでabcという名前を付けます。
+  <a href="#abc">abcと名前を付けた場所リンクします</a><br>
+  <a href="a.html"def">別ファイルの名前を付けた場所へリンクします</a>
+                      
+<h1>練習問題3.4</h1>
+  <aside class="ad">
+  <h1>広報</h1>
+  <a href="https://www.josai.ac.jp/club/jyosisofuto.html">                  
+  <section>
+  <h1>城西大学 女子ソフトボール部</h1>
+  <p>女子ソフトボール部<全日本総合女子ソフトボール選手権大会出場決定!></p>                                                       
+  
    
   </body>
 </html>
