--- a/index.html
+++ b/index.html
@@ -181,11 +181,13 @@ maxlength="4"></label></p>
   <a href="#abc">abcと名前を付けた場所リンクします</a><br>
   <a href="a.html"def">別ファイルの名前を付けた場所へリンクします</a>
 
-<li>ほにゃらら</li>
-</ol>
-<a id=“abc”>ここがabcの場所</a>
-<dl>
-<dt>作者</dt>
+<h1>練習問題2.4</h1>
+
+  <li>ほにゃらら</li>
+  </ol>
+  <a id=“abc”>ここがabcの場所</a>
+  <dl>
+  <dt>作者</dt>
                       
 <h1>練習問題3.4</h1>
   <aside class="ad">
