--- a/index.html
+++ b/index.html
@@ -182,7 +182,12 @@ maxlength="4"></label></p>
   ファイルの途中にidでabcという名前を付けます。
   <a href="#abc">abcと名前を付けた場所リンクします</a><br>
   <a href="a.html"#def">別ファイルの名前を付けた場所へリンクします</a>
-                      
+<li>ほにゃらら</li>
+ </ol>
+<a id="abc">ここがabcの場所</a>
+ <dl>
+           <dl>liyanxi</dt>
+           
 <h1>練習問題3.4</h1>
   <aside class="ad">
   <h1>広報</h1>
