--- a/index.html
+++ b/index.html
@@ -191,9 +191,19 @@ maxlength="4"></label></p>
   <h3>広報</h3>
   <a href="https://www.josai.ac.jp/club/jyosisofuto.html">                  
   <section>
-  <h1>城西大学 女子ソフトボール部</h1>
+  <h4>城西大学 女子ソフトボール部</h4>
   <p>女子ソフトボール部<全日本総合女子ソフトボール選手権大会出場決定!></p> 
+  </p>
+  </section></a>
+  <a href=“https://www.josai.ac.jp/news/20200615-04.html”>
+  <section>
+  <h5>城西大学JOSAI SPORTS FEILD </h5>
+  <p> JOSAI SPORTS FIELD建設・整備が進んでいます【城西大学坂戸キャンパス】
+  </p>                                                       
+  <p>城西大学坂戸キャンパスの北側の毛呂山町下川原沼に、サッカー場２面、ソフトボール場１面、アップダウンのあるランニングコース、管理施設にはシャワー室やミーティングルームなどを備えた新しいグラウンド"JOSAI SPORTS FEILD" が完成間近です。使用開始は、2020年9月の予定です。</p>
+  <section>                                                   
+  </section></a>
+  </aside>                                                       
                                                          
-                                                       
   </body>
 </html>
