--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@ maxlength="4"></label></p>
   <a href="https://www.josai.ac.jp/education/management/index.html/"><img src="./image/keiei_small.jpg" alt="城西大学ホームページ"></a>
   
 <h1>練習問題3.2</h1>
-  <a href="a.html" target"_blank">別画面を開いてリンクします</a><br>
-  <a href="a.html" target"_self">リンク元と同じフレームにリンクします</a><br>
-  <a href="a.html" target"_parent">ひとつ上の親フレームにリンクします</a><br>
-  <a href="a.html" target"_top">フレームをすべて解除してリンクします</a><br>
+  <a href="a.html" target="_blank">別画面を開いてリンクします</a><br>
+  <a href="a.html" target="_self">リンク元と同じフレームにリンクします</a><br>
+  <a href="a.html" target="_parent">ひとつ上の親フレームにリンクします</a><br>
+  <a href="a.html" target="_top">フレームをすべて解除してリンクします</a><br>
   <a href="a.html" target="abc">abcという名前のフレームにリンクします</a><br>
 
 <h1>練習問題3.3</h1>
@@ -203,7 +203,20 @@ maxlength="4"></label></p>
   <p>城西大学坂戸キャンパスの北側の毛呂山町下川原沼に、サッカー場２面、ソフトボール場１面、アップダウンのあるランニングコース、管理施設にはシャワー室やミーティングルームなどを備えた新しいグラウンド"JOSAI SPORTS FEILD" が完成間近です。使用開始は、2020年9月の予定です。</p>
   <section>                                                   
   </section></a>
-  </aside>                                                       
-                                                         
+  </aside>
+ 
+ <h1>練習問題3.5</h1>                                                                                                                       
+ <nav>
+ <ul>                                                                                                                       
+ <li><a                                                                                                                          
+ href=“https://www.josai.ac.jp/club/jyosisofuto.html”>女子ソフトボール部</a></li>                                                                                                                        
+ <li><a
+ href=“https://www.josai.ac.jp/club/ekiden_hakone.html”>男子駅伝部</a></li>                                                                                                                        
+ <li><a                                                                                                                        
+ href=“https://www.josai.ac.jp/club/ekiden_joshiekiden.html”>女子駅伝部</a></li>                                                                                                                        
+ <li><a>クラブ・サークル活動</a></li>                                                                                                                        
+ </ul>                                                                                                                        
+ </nav>                                                                                                                         
+                                                                                                                         
   </body>
 </html>
