--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ maxlength="4"></label></p>
   ファイルの途中にidでabcという名前を付けます。
    
   <a href="#abc">abcと名前を付けた場所リンクします</a><br>
-  <a href="a.html"#def">別ファイルの名前を付けた場所へリンクします</a>
+  <a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
 
            
 <h1>練習問題3.4</h1>
