--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ maxlength="4"></label></p>
   <a href="https://www.josai.ac.jp/club/jyosisofuto.html">                  
   <section>
   <h4>城西大学 女子ソフトボール部</h4>
-  <p>女子ソフトボール部<全日本総合女子ソフトボール選手権大会出場決定!></p> 
+  <p>女子ソフトボール部<全日本総合女子ソフトボール選手権大会出場決定!> 
   </p>
   </section></a>
   <a href=“https://www.josai.ac.jp/news/20200615-04.html”>
