--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="ja">
+  
+<title>Web開発の練習1</title>
+<link rel="stylesheet" href="mystyle.css"> <!--この行を追加-->
 
 <head>
   <meta charset="UTF-8">
