--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="ja">
-  
-<title>Web開発の練習1</title>
-<link rel="stylesheet" href="mystyle.css"> <!--この行を追加-->
 
 <head>
   <meta charset="UTF-8">
   <title> Web開発の練習１</title>
+  <link rel="stylesheet" href="mystyle.css">
+  <!--この行を追加-->
 </head>
  <body>
   <!--文字の大きさの練習-->
