--- a/index.html
+++ b/index.html
@@ -216,7 +216,12 @@ maxlength="4"></label></p>
  href=“https://www.josai.ac.jp/club/ekiden_joshiekiden.html”>女子駅伝部</a></li>                                                                                                                        
  <li><a>クラブ・サークル活動</a></li>                                                                                                                        
  </ul>                                                                                                                        
- </nav>                                                                                                                         
+ </nav>   
+   
+ <th class=“important”>長所</th>
+ <p class="sample1">セキュリティ対策は今後ますます重要になるでしょう。</p>
+ <p class="sample2">セキュリティ対策は今後ますます重要になるでしょう。</p>
+ <p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
                                                                                                                          
   </body>
 </html>
