--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title> Web開発の練習１</title>
   <link rel="stylesheet" href="mystyle.css">
-  <script src=“myjs.js"></script>
+  <script src="myjs.js"></script>
   <!--この行を追加-->
 </head>
  <body>
@@ -55,7 +55,7 @@
 <h1>練習問題2.4</h1>
 
 <table>
-  <th class=“important”>長所</th>
+  <th class="important">長所</th>
  <p class="sample1">セキュリティ対策は今後ますます重要になるでしょう。</p>
  <p class="sample2">セキュリティ対策は今後ますます重要になるでしょう。</p>
  <p class="sample3">セキュリティ対策は今後ますます重要になるでしょう。</p>
