--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
    </details>
   </caption>
   <thead>
-   <tr><th長所</th><th>どこで食べるか</th><th>短所</th></tr>
+   <tr><th>長所</th><th>どこで食べるか</th><th>短所</th></tr>
   </thead>
   <tbody>
    <tr><td>ネタにこだわり、技術が素晴らしい</td><th>銀座の高級店
@@ -79,7 +79,7 @@
  <table>
   <caption><strong>お寿司をどこで食べるか？その長所と短所</strong></caption>
   <thead>
-   <tr><th>どこで食べるか</th><th長所</th><th>短所
+   <tr><th>どこで食べるか</th><th>長所</th><th>短所
   </th></tr>
   </thead>
   <tbody>
