--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ maxlength="4"></label></p>
   <p>女子ソフトボール部＜全日本総合女子ソフトボール選手権大会出場決定!＞ </p>
   </section></a>
   
-  <a href=“https://www.josai.ac.jp/news/20200615-04.html”>
+  <a href="https://www.josai.ac.jp/news/20200615-04.html">
   <section>
   <h5>城西大学JOSAI SPORTS FEILD </h5>
   <p> JOSAI SPORTS FIELD建設・整備が進んでいます【城西大学坂戸キャンパス】</p>                                                       
