--- a/a.html
+++ b/a.html
@@ -7,12 +7,7 @@
 <body>
   <p> アンカータグの練習です。 </p>
    
-  <li>ほにゃらら</li>
-  </ol>
-  <a id="abc">ここがabcの場所</a>
-  <dl>
-  <dl>liyanxi</dt>
-    
-  <a id=“def”>ここがdefの場所</a>
+  <a id="def">ここがdefの場所</a>
+  
 </body>
 </html>
