--- a/index.html
+++ b/index.html
@@ -191,7 +191,12 @@ maxlength="4"></label></p>
 <h1>練習問題3.3</h1>
   
   ファイルの途中にidでabcという名前を付けます。
-   
+    
+   <li>ほにゃらら</li>
+  </ol>
+  <a id="abc">ここがabcの場所</a>
+  <dl>
+  <dl>liyanxi</dt>
   <a href="#abc">abcと名前を付けた場所リンクします</a><br>
   <a href="a.html#def">別ファイルの名前を付けた場所へリンクします</a>
 
