--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <h1>練習問題2.3</h1>
     
 <dl>
- <dt>作者</dt>
+ <dt>liyanxi</dt>
  <dd>ジョン</dd>
  <dd>ポール</dd>
  <dd>ジョージ</dd>
@@ -221,7 +221,10 @@ maxlength="4"></label></p>
  <li><a href="https://www.josai.ac.jp/club/ekiden_joshiekiden.html">女子駅伝部</a></li>                                                                                                                        
  <li><a>クラブ・サークル活動</a></li>                                                                                                                        
  </ul>                                                                                                                        
- </nav>   
-                                                                                                                           
+ </nav> 
+   
+  <h1>イベントハンドラの練習</h1>
+  <input type="button" value="ここをクリック" onclick="alert('Hello, Osamu!');">  
+   
   </body>
 </html>
