--- a/index.html
+++ b/index.html
@@ -223,11 +223,16 @@ maxlength="4"></label></p>
  </ul>                                                                                                                        
  </nav> 
    
-  <!--
   <h1>イベントハンドラの練習</h1>
-  <input type="button" value="ここをクリック"
-  onclick="alert('Hello, Osamu!');">  
-  -->
+ <input type="button" value="ここをクリック" onclick="alert('Hello, yu!');">
+ <input type="button" value="ここをクリック" ondblclick="alert('Hello, yu!');">
+
+ <script src="ex6-1.js">
+ </script>
+ 
+ <h1>関数の呼び出し</h1>
+ <input type="button" value="ここをクリック" onclick="sayhello();">
+ <input type="button" value="ここをクリック" onclick="sayhello();sayhello();">
    
   </body>
 </html>
