--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ maxlength="4"></label></p>
  </nav> 
    
   <h1>イベントハンドラの練習</h1>
- <input type="button" value="ここをクリック" onclick="alert('Hello, yu!');">
- <input type="button" value="ここをクリック" ondblclick="alert('Hello, yu!');">
+ <input type="button" value="ここをクリック" onclick="alert('Hello, li!');">
+ <input type="button" value="ここをクリック" ondblclick="alert('Hello, li!');">
 
  <script src="ex6-1.js">
  </script>
