--- a/index.html
+++ b/index.html
@@ -227,12 +227,12 @@ maxlength="4"></label></p>
  <input type="button" value="ここをクリック" onclick="alert('Hello, li!');">
  <input type="button" value="ここをクリック" ondblclick="alert('Hello, li!');">
 
- <script src="ex6-1.js">
- </script>
+ <script src="ex6-1.js"></script>
  
  <h1>関数の呼び出し</h1>
  <input type="button" value="ここをクリック" onclick="sayhello();">
  <input type="button" value="ここをクリック" onclick="sayhello();sayhello();">
+ <input type="button" value="ここをクリック" onclick="saygoodbye();">
    
   </body>
 </html>
