--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@ maxlength="4"></label></p>
  <h1>関数の呼び出し</h1>
  <input type="button" value="ここをクリック" onclick="sayhello();">
  <input type="button" value="ここをクリック" onclick="sayhello();sayhello();">
- <input type="button" value="ここをクリック" onclick="Goodbye();">
+ <input type="button" value="Goodbye" onclick="Goodbye();">
    
   </body>
 </html>
